tests/parser/parse-break.1.bad.coalton
;; BAD: Parse-Break
(package test-parser)

(define f (break))
